<resources>
    <string name="app_name">Lab4ALU</string>
    <string name="calculate_button">Calculate</string>
    <string name="op">OP</string>
    <string name="b7">B7</string>
    <string name="b6">B6</string>
    <string name="b5">B5</string>
    <string name="b4">B4</string>
    <string name="b3">B3</string>
    <string name="a4">A4</string>
    <string name="a3">A3</string>
    <string name="a2">A2</string>
    <string name="a1">A1</string>
    <string name="a0">A0</string>
    <string name="a6">A6</string>
    <string name="b1">B1</string>
    <string name="b2">B2</string>
    <string name="s2">S2</string>
    <string name="s3">S3</string>
    <string name="s4">S4</string>
    <string name="s6">S6</string>
    <string name="a5">A5</string>
    <string name="a7">A7</string>
    <string name="b0">B0</string>
    <string name="s1">S1</string>
    <string name="s7">S7</string>
    <string name="s5">S5</string>
    <string name="s0">S0</string>
    <string name="c">C</string>
    <string name="zero_button">0</string>
    <string name="one_button">1</string>
    <string name="my_name">Cameron Rhodes</string>
</resources>
